syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "drivemount";

service DriveMounter {
    rpc MountDrive(MountDriveRequest) returns (google.protobuf.Empty);
    rpc UnmountDrive(UnmountDriveRequest) returns (google.protobuf.Empty);
    rpc ExecCmd(ExecCmdRequest) returns (ExecCmdResponse);
}

message MountDriveRequest {
     string DriveID = 1;
     string DestinationPath = 2;
     string FilesytemType = 3;
     repeated string Options = 4;
}

message UnmountDriveRequest {
    string DriveID = 1;
}

message ExecCmdRequest {
    string Cmd = 1;
}

message ExecCmdResponse {
    string Outstr = 1;
}